# safiro

./: .gitignore  docker-compose.yml  main.py  package-lock.json  pyproject.toml
apis/utils/: custom_exceptions.py  custom_permissions.py  custom_response.py  custome_throttle.py  pagination.py  paginations.py
apps/auth_app/: admin.py  apps.py  enums.py  models.py  signals.py  tasks.py  urls.py  validators.py  views.py
apps/core_app/: models.py
apps/shop_app/: admin.py  apps.py  models.py  tasks.py
apps/trip_app/: admin.py  apps.py  models.py
auth_app/: admin.py  enums.py  models.py  signals.py  validators.py
auth_app/migrations/: 0001_initial.py  0002_alter_driver_father_name_alter_driver_image_and_more.py  0002_alter_usernotification_options.py  0002_remove_user_first_name_remove_user_last_name.py  0002_requestlogverifyphone.py  0003_alter_driver_license_number_alter_driver_nation_code.py  0003_alter_driver_nation_code.py  0003_driverdocument_is_active.py  0003_requestlogverifyphone_ip_address.py  0004_alter_driver_license_number.py  0004_driverdocument_image.py  0004_requestlogverifyphone_user_agent.py  0005_alter_requestlogverifyphone_is_accept.py  0005_alter_user_is_passenger.py  0006_alter_driver_is_active_and_more.py  0006_requestlogverifyphone_behavior_type.py  0007_driver_note.py  0007_requestlog_delete_requestlogverifyphone.py  0008_alter_requestlog_table.py
base/: __init__.py  asgi.py  dj_celery.py  dj_clickhouse.py  settings.py  urls.py  views.py
base/utils/: custom_exceptions.py  generate.py  neshan.py  send_sms.py  uuid.py
base_image/base/: Dockerfile  requirements.txt
base_image/prod/: Dockerfile  (+1 more)
scripts/: gunicorn.conf.py  start.sh
templates/: base.html  index.html
(+71 files in other folders)
